@@ -63,18 +63,17 @@ AC_DEFUN([GROFF_PRINT], [
   fi
 ])
 
-# Bison-generated parsers have problems with C++ compilers other than
-# g++.  Thus, byacc is preferred over bison.  If no yacc program is
-# available, we issue an error only if not building from a distribution
-# archive, because files generated by a yacc are already present there.
+# If no yacc program is available, we issue an error only if not
+# building from a distribution archive, because files generated by a
+# yacc are already present there.
 
 AC_DEFUN([GROFF_PROG_YACC], [
-  AC_CHECK_PROGS([YACC], [byacc 'bison -y' yacc], [missing])
+  AC_CHECK_PROGS([YACC], ['bison -y' byacc yacc], [missing])
   if ! test -f "$srcdir"/.tarball-version
   then
     if test "$YACC" = missing
     then
-      AC_MSG_ERROR([could not find 'byacc', 'bison', or 'yacc'], 1)
+      AC_MSG_ERROR([could not find 'bison', 'byacc', or 'yacc'], 1)
     fi
   fi
 ])
